--- a/WPF.QuickStart.UI/packages.config
+++ b/WPF.QuickStart.UI/packages.config
@@ -3,4 +3,5 @@
   <package id="Caliburn.Micro" version="2.0.1" targetFramework="net45" />
   <package id="Caliburn.Micro.Core" version="2.0.1" targetFramework="net45" />
   <package id="Caliburn.Micro.Start" version="2.0.1" targetFramework="net45" />
+  <package id="SwissKnife.T4.AppSettings" version="0.0.5" targetFramework="net45" />
 </packages>
