Temporary commit. (multitab not working yet)

--- a/WPF.QuickStart.UI/App.config
+++ b/WPF.QuickStart.UI/App.config
@@ -5,5 +5,8 @@
     </startup>
   <appSettings>
     <add key="Application.name" value="WPF.Quickstart" />
+    <add key="Twitter.oAuth.ConsumerKey" value="GjWlZHpNx4L8N7uIIawAEN4aJ" />
+    <add key="Twitter.oAuth.ConsumerSecret" value="OkKgXrxwe1C3UBBmCgGDXB0Y1OVw1zwBfKALweZAoXwE18Xkxz" />
+    <add key="Twitter.oAuth.ApiUrl" value="https://api.twitter.com/oauth2/token" />
   </appSettings>
 </configuration>
