--- a/WPF.Quickstart.Server/App.config
+++ b/WPF.Quickstart.Server/App.config
@@ -1,23 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-  </startup>
-  <!--<configSections>
+  <configSections>
     <sectionGroup name="common">
       <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
     </sectionGroup>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-  </configSections>-->
+  </configSections>
   <appSettings>
-    <add key="Application.name" value="WPF.Quickstart" />
-    <add key="Twitter.oAuth.ConsumerKey" value="GjWlZHpNx4L8N7uIIawAEN4aJ" />
-    <add key="Twitter.oAuth.ConsumerSecret" value="OkKgXrxwe1C3UBBmCgGDXB0Y1OVw1zwBfKALweZAoXwE18Xkxz" />
-    <add key="Twitter.oAuth.ApiUrl" value="https://api.twitter.com/oauth2/token" />
+    <add key="WCFService.MarketData.Url" value="net.tcp://localhost:8080/MarketData" />
+    <add key="WCFService.MarketData.Metadata.Url" value="http://localhost:8081/MarketData" />
   </appSettings>
-  
-  
-  <!--<common>
+  <common>
     <logging>
       <factoryAdapter type="Common.Logging.Log4Net.Log4NetLoggerFactoryAdapter, Common.Logging.Log4Net">
         <arg key="configType" value="INLINE" />
@@ -67,30 +60,15 @@
     </appender>
     <root>
       <level value="DEBUG" />
-      --><!--
       <appender-ref ref="ColoredConsoleAppender" />
+      <!--
       <appender-ref ref="RollingFileAppender" />      
       <appender-ref ref="TraceAppender" />
-      --><!--
+      -->   
     </root>
-  </log4net>-->
+  </log4net>
 
-  
-  
-  <system.serviceModel>
-    <bindings>
-      <netTcpBinding>
-        <binding name="NetTcpBinding_IMarketData" />
-      </netTcpBinding>
-    </bindings>
-    <client>
-      <endpoint address="net.tcp://localhost:8080/MarketData" binding="netTcpBinding"
-        bindingConfiguration="NetTcpBinding_IMarketData" contract="MarketDataProxy.IMarketData"
-        name="NetTcpBinding_IMarketData">
-        <identity>
-          <userPrincipalName value="daniel.nguyen@Novencia.local" />
-        </identity>
-      </endpoint>
-    </client>
-  </system.serviceModel>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
 </configuration>
