--- a/WPF.QuickStart.UI/packages.config
+++ b/WPF.QuickStart.UI/packages.config
@@ -5,6 +5,7 @@
   <package id="Caliburn.Micro.Start" version="2.0.1" targetFramework="net45" />
   <package id="Common.Logging" version="2.0.0" targetFramework="net45" />
   <package id="Common.Logging.Log4Net" version="2.0.1" targetFramework="net45" />
+  <package id="Extended.Wpf.Toolkit" version="2.2.1" targetFramework="net45" />
   <package id="log4net" version="1.2.10" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
   <package id="SwissKnife.T4.AppSettings" version="0.0.5" targetFramework="net45" />
