--- a/WPF.Quickstart.Model/WPF.Quickstart.Model.csproj
+++ b/WPF.Quickstart.Model/WPF.Quickstart.Model.csproj
@@ -70,6 +70,8 @@
     <Compile Include="Twitter\TwitAuthenticateResponse.cs" />
     <Compile Include="Yahoo\HistoricalQuotationApi.cs" />
     <Compile Include="Yahoo\QuotationApi.cs" />
+    <Compile Include="Yahoo\QuotationSingleResult.cs" />
+    <Compile Include="Yahoo\Quote.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
