--- a/WPF.Quickstart.Model/WPF.Quickstart.Model.csproj
+++ b/WPF.Quickstart.Model/WPF.Quickstart.Model.csproj
@@ -65,6 +65,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Twitter\ResultSearchedTweet.cs" />
     <Compile Include="Twitter\Tweet.cs" />
     <Compile Include="Twitter\TweetInformation.cs" />
     <Compile Include="Twitter\TwitAuthenticateResponse.cs" />
