--- a/WPF.QuickStart.UI/packages.config
+++ b/WPF.QuickStart.UI/packages.config
@@ -8,5 +8,7 @@
   <package id="Extended.Wpf.Toolkit" version="2.2.1" targetFramework="net45" />
   <package id="log4net" version="1.2.10" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
+  <package id="OxyPlot.Core" version="2014.1.474" targetFramework="net45" />
+  <package id="OxyPlot.Wpf" version="2014.1.474" targetFramework="net45" />
   <package id="SwissKnife.T4.AppSettings" version="0.0.5" targetFramework="net45" />
 </packages>
