--- a/WPFQuickstart.Core/WPFQuickstart.Core.csproj
+++ b/WPFQuickstart.Core/WPFQuickstart.Core.csproj
@@ -70,6 +70,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Utils\ColorHelper.cs" />
+    <Compile Include="Utils\PriceTypeOptions.cs" />
     <Compile Include="Utils\Twitter\TwitterHelper.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
