Fix bugs & reviews screens Review styles Add MahApp lib

--- a/WPF.QuickStart.UI/App.config
+++ b/WPF.QuickStart.UI/App.config
@@ -15,8 +15,11 @@
     <add key="Twitter.oAuth.ConsumerSecret" value="OkKgXrxwe1C3UBBmCgGDXB0Y1OVw1zwBfKALweZAoXwE18Xkxz" />
     <add key="Twitter.oAuth.ApiUrl" value="https://api.twitter.com/oauth2/token" />
   </appSettings>
-  
-  
+
+  <runtime>
+    <loadFromRemoteSources enabled="true" />
+  </runtime>
+
   <!--<common>
     <logging>
       <factoryAdapter type="Common.Logging.Log4Net.Log4NetLoggerFactoryAdapter, Common.Logging.Log4Net">
