- Styling - Add operation on WCF Service

--- a/WPF.QuickStart.UI/App.config
+++ b/WPF.QuickStart.UI/App.config
@@ -91,7 +91,7 @@
         bindingConfiguration="NetTcpBinding_IMarketData" contract="MarketDataProxy.IMarketData"
         name="NetTcpBinding_IMarketData">
         <identity>
-          <userPrincipalName value="daniel.nguyen@Novencia.local" />
+          <userPrincipalName value="NEO\Dan" />
         </identity>
       </endpoint>
     </client>
