--- a/WPF.QuickStart.UI/WPF.QuickStart.UI.csproj
+++ b/WPF.QuickStart.UI/WPF.QuickStart.UI.csproj
@@ -284,7 +284,6 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
-    <Resource Include="Resources\Entypo.ttf" />
     <None Include="Service References\MarketDataProxy\MarketData.wsdl" />
     <None Include="Service References\MarketDataProxy\MarketData.xsd">
       <SubType>Designer</SubType>
@@ -295,7 +294,11 @@
     <None Include="Service References\MarketDataProxy\MarketData2.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Service References\MarketDataProxy\MarketData3.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Service References\MarketDataProxy\MarketDataManager.wsdl" />
+    <Resource Include="Resources\Entypo.ttf" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -341,21 +344,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadataStorage Include="Service References\MarketDataProxy\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\MarketDataProxy\configuration91.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\MarketDataProxy\configuration.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\MarketDataProxy\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
       <Visible>False</Visible>
       <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
@@ -383,6 +371,26 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Entypo-license.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\icon.ico" />
+    <Resource Include="Images\icongit.ico" />
+    <Resource Include="Images\icontwitter.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\MarketDataProxy\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\MarketDataProxy\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\MarketDataProxy\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\MarketDataProxy\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(XamlSpyInstallPath)MSBuild\FirstFloor.XamlSpy.WPF.targets" Condition="'$(XamlSpyInstallPath)' != '' and '$(Configuration)' == 'DEBUG'" />
