--- a/WPF.Quickstart.Server/App.config
+++ b/WPF.Quickstart.Server/App.config
@@ -9,6 +9,11 @@
   <appSettings>
     <add key="WCFService.MarketData.Url" value="net.tcp://localhost:8080/MarketData" />
     <add key="WCFService.MarketData.Metadata.Url" value="http://localhost:8081/MarketData" />
+    <add key="Application.name" value="WPF.Quickstart" />
+    <add key="Twitter.oAuth.ConsumerKey" value="GjWlZHpNx4L8N7uIIawAEN4aJ" />
+    <add key="Twitter.oAuth.ConsumerSecret" value="OkKgXrxwe1C3UBBmCgGDXB0Y1OVw1zwBfKALweZAoXwE18Xkxz" />
+    <add key="Twitter.oAuth.ApiUrl" value="https://api.twitter.com/oauth2/token" />
+    <add key="WCFService.MarketData.RefreshFrequency.Tweet" value="5000" />
   </appSettings>
   <common>
     <logging>
